Added unordered list of foods

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
   <h1>Hello Coders</h1>
   <p>This is a sample text file just to re-awaken my coding brain. There is nothing here but a bunch of HTML. This will refresh my muscles as to how to create HTML pages.</p>
+
+  <h3>List of my Favorite Foods</h3>
+  <ul>
+    <li>Fried Chicken</li>
+    <li>Pizza</li>
+    <li>Chinese Food</li>
+  </ul>
 </body>
 </html>
