Added more lists to the file

--- a/index.html
+++ b/index.html
@@ -16,5 +16,23 @@
     <li>Pizza</li>
     <li>Chinese Food</li>
   </ul>
+
+  <ol>Things to get done today
+    <li>Laundry</li>
+    <li>Dinner</li>
+    <li>Coding Practice</li>
+  </ol>
+
+  <ul>Places I'd like to visit someday
+    <li>The East Coast</li>
+    <li>USS Arizona Memorial</li>
+    <li>Mount Rushmore</li>
+  </ul>
+
+  <ol>Top Favorite Movies
+    <li>The Ghost and Mrs. Muir</li>
+    <li>West Side Story</li>
+    <li>Practical Magic</li>
+  </ol>
 </body>
 </html>
