Added styling to HTML list labels

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
   <p>This is a sample text file just to re-awaken my coding brain. There is nothing here but a bunch of HTML. This will refresh my muscles as to how to create HTML pages.</p>
 
   <h3>Lists</h3>
-  <ul>My Favorite Foods
+  <ul><strong><em>My Favorite Foods</em></strong>
     <li>Fried Chicken</li>
     <li>Pizza</li>
     <li>Chinese Food</li>
   </ul>
 
-  <ol>Things to get done today
+  <ol><strong><em>Things to get done today</em></strong>
     <li>Laundry</li>
     <li>Dinner</li>
     <li>Coding Practice</li>
   </ol>
 
-  <ul>Places I'd like to visit someday
+  <ul><strong><em>Places I'd like to visit someday</em></strong>
     <li>The East Coast</li>
     <li>USS Arizona Memorial</li>
     <li>Mount Rushmore</li>
   </ul>
 
-  <ol>Top Favorite Movies
+  <ol><strong><em>Top Favorite Movies</em></strong>
     <li>The Ghost and Mrs. Muir</li>
     <li>West Side Story</li>
     <li>Practical Magic</li>
